Fix z-index for SplitButton

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -43,7 +43,7 @@ $height: 37px;
       left: 0;
       width: 100%;
       height: $height;
-      z-index: 1;
+      z-index: 2;
     }
 
     button {
